# cpp_exercises

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: package_add_g_test.cmake
src/: CMakeLists.txt
src/CMakeValidation/: CMakeLists.txt  test_code.cpp
src/TemplateMetaprogramming/: CMakeLists.txt
src/TemplateMetaprogramming/chapter2/: CMakeLists.txt  chapter2.cpp  chapter2.hpp  test_chapter2.cpp
